applied changes to front-end

--- a/templates/caps.html
+++ b/templates/caps.html
@@ -7,7 +7,6 @@
     <title>Headware</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="static/style.css">
@@ -28,14 +27,10 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="index.html">Eyeware</a>
-                    <a class="dropdown-item active" href="caps.html">Caps</a>
+                    <a class="dropdown-item active bg-danger" href="caps.html">Caps</a>
                 </div>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search for products" aria-label="Search">
-            <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
     </nav>
 
@@ -50,43 +45,37 @@
         <div class="row caps py-3">
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/cap1.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img" src="static/cap1.png" alt="Blue Cap">
                     </div>
 
-                    <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <!-- Card body -->
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Cool Cap</h5>
+                        <!-- content -->
+                        <p class="card-text">Caps</p></br><b>Rs. 299</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger" href="headbow">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="cap1">Try it out!</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/cap2.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img" src="static/cap2.png" alt="Cow Boy Cap">
                     </div>
 
-                    <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <!-- Card body -->
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Cow-Boy Hat</h5>
+                        <!-- content -->
+                        <p class="card-text">Hats</p></br><b>Rs. 799</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="cap2">Try it out!</a>
                     </div>
@@ -94,21 +83,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/crown.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/crown.png" alt="crown tiarah">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Crown Tiarah</h5>
+                        <!-- content -->
+                        <p class="card-text">Tiarah</p></br><b>Rs. 459</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="crown">Try it out!</a>
                     </div>
@@ -116,21 +102,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/headband.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/headband.png" alt="Flower tiarah">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Flower Tiarah</h5>
+                        <!-- content -->
+                        <p class="card-text">Tiarah</p></br><b>Rs. 234</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="headband">Try it out!</a>
                     </div>
@@ -138,21 +121,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/cap3.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/cap3.png" alt="Women's Hat">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Women's Hat</h5>
+                        <!-- Content -->
+                        <p class="card-text">Hats</p></br><b>Rs. 799</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="cap3">Try it out!</a>
                     </div>
@@ -160,21 +140,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/cap4.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/cap4.png" alt="Straw Sombrero Hat">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Straw Sombrero</h5>
+                        <!-- Content -->
+                        <p class="card-text">Hats</p></br><b>Rs. 845</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="cap4">Try it out!</a>
                     </div>
@@ -182,21 +159,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/cap5.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/cap5.png" alt="Golf Angels cap">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Golf Angels Cap</h5>
+                        <!-- Content -->
+                        <p class="card-text">Cap</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="cap5">Try it out!</a>
                     </div>
@@ -204,21 +178,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/cap6.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/cap6.png" alt="Grey Women's Hat">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <h5 class="pink-text pb-2 pt-1">Grey Women's Hat</h5>
                         <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <p class="card-text">Hats</p></br><b>Rs. 699</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="cap6">Try it out!</a>
                     </div>
@@ -226,26 +197,25 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/cap7.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/cap7.png" alt="FBI cap">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <h5 class="pink-text pb-2 pt-1">FBI Cap</h5>
                         <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <p class="card-text">Caps</p></br><b>Rs. 299</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="cap7">Try it out!</a>
                     </div>
                 </div>
             </div>
+
+            
 
         </div>
     </div>
