--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
     <title>Eyeware</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="static/style.css">
@@ -28,15 +27,11 @@
                     <b>Category</b>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item active" href="index.html">Eyeware</a>
+                    <a class="dropdown-item active bg-danger" href="index.html">Eyeware</a>
                     <a class="dropdown-item" href="caps.html">Caps</a>
                 </div>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search for products" aria-label="Search">
-            <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
     </nav>
 
@@ -52,21 +47,18 @@
             
             <div class="col-lg-4 col-md-12 mb-4">
             
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/glass1.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/glass1.png" alt="Thug Glasses Image">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Thug Glasses</h5>
+                        <!-- Content -->
+                        <p class="card-text">Eye Glasses</p></br><b>Rs. 199</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="glass1">Try it out!</a>
                     </div>
@@ -74,21 +66,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/specs.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/specs.png" alt="Specs Image">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Spectacles</h5>
+                        <!-- Content -->
+                        <p class="card-text">Eye Glasses</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="specs">Try it out!</a>
                     </div>
@@ -96,21 +85,18 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/orangeGlass.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/orangeGlass.png" alt="Orange Glasses">
                     </div>
 
                     <!-- Card content -->
                     <div class="card-body card-body-cascade">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Orange Glasses</h5>
+                        <!-- Content -->
+                        <p class="card-text">Goggles</p></br><b>Rs. 499</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="orangeGlass">Try it out!</a>
                     </div>
@@ -119,21 +105,18 @@
 
             <div class="col-lg-4 col-md-12 mb-4">
             
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/glass2.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/glass2.png" alt="Sports Glasses">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Sports Glasses</h5>
+                        <!-- Content -->
+                        <p class="card-text">Sports Eyeware</p></br><b>Rs. 234</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="glass2">Try it out!</a>
                     </div>
@@ -142,21 +125,18 @@
 
             <div class="col-lg-4 col-md-12 mb-4">
             
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/glass3.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/glass3.png" alt="Goggles">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Cool Googles</h5>
+                        <!-- Content -->
+                        <p class="card-text">Eyeware</p></br><b>Rs. 459</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="glass3">Try it out!</a>
                     </div>
@@ -165,21 +145,18 @@
 
             <div class="col-lg-4 col-md-12 mb-4">
             
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/glass4.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/glass4.png" alt="Funky Glass">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Funky Glass</h5>
+                        <!-- Content -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 699</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="glass4">Try it out!</a>
                     </div>
@@ -188,21 +165,18 @@
 
             <div class="col-lg-4 col-md-12 mb-4">
             
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="static/specs1.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                    <div class="view py-2">
+                        <img class="card-img-top" src="static/specs1.png" alt="Harry Potter Glasses">
                     </div>
 
                     <!-- Card content -->
                     <div class="card-body card-body-cascade">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Harry Potter Specs</h5>
+                        <!-- Content -->
+                        <p class="card-text">Eye Glasses</p></br><b>Rs. 545</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="specs1">Try it out!</a>
                     </div>
@@ -211,21 +185,18 @@
 
             <div class="col-lg-4 col-md-12 mb-4">
             
-                <div class="card card-cascade narrower text-center">
+                <div class="card h-100 text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="static/specs2.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
+                        <img class="card-img-top" src="static/specs2.png" alt="Cool Specs">
                     </div>
 
                     <!-- Card content -->
-                    <div class="card-body card-body-cascade">
+                    <div class="card-body">
                         <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <h5 class="pink-text pb-2 pt-1">Cool Spectacles</h5>
+                        <!-- Content -->
+                        <p class="card-text">Eye Glassses</p></br><b>Rs. 649</b></p>
                         <!-- Button -->
                         <a class="btn btn-outline-danger" href="specs2">Try it out!</a>
                     </div>
