--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@ body {
 }
 h5{
     font-family: 'Fira Sans', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.5rem;
 }
 .container .heading h1, .btn{
@@ -32,9 +32,12 @@ h5{
 .card:hover{
     box-shadow: 5px 10px 8px #888888;
 }
+.view{
+    height: 100%;
+}
 .view img{
     width: 80%;
-    height: 100%;
+    /* height: 100%; */
     border-radius: 1rem;
     border: 0;
 }
